// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletUpgradeSection — snapshots > renders the custodial EOA state with upgrade button 1`] = `
<div>
  <div
    class="account-subsection"
  >
    <label
      class="account-field-label"
    >
      Smart account signer
    </label>
    <p
      class="account-field-desc"
    >
      Controls how your TRUST smart contract wallet signs transactions. Phase 2 replaces the server-held custodial key with a passkey in your device's secure enclave.
    </p>
    <div
      class="_row_8d6e87"
    >
      <span
        aria-hidden="true"
        class="_dot_8d6e87 _dotIdle_8d6e87"
      />
      <span
        class="_label_8d6e87"
      >
        Custodial EOA
      </span>
      <span
        class="_status_8d6e87"
      >
        <span
          class="_badge_fa5bc6 _neutral_fa5bc6 _sm_fa5bc6"
        >
          Phase 1
        </span>
      </span>
      <span
        class="_action_8d6e87"
      >
        <button
          aria-busy="false"
          class="_button_947cf7 _secondary_947cf7 _sm_947cf7"
          type="button"
        >
          Upgrade to passkey
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`WalletUpgradeSection — snapshots > renders the passkey-enrolled state 1`] = `
<div>
  <div
    class="account-subsection"
  >
    <label
      class="account-field-label"
    >
      Smart account signer
    </label>
    <p
      class="account-field-desc"
    >
      Controls how your TRUST smart contract wallet signs transactions. Phase 2 replaces the server-held custodial key with a passkey in your device's secure enclave.
    </p>
    <div
      class="_row_8d6e87"
    >
      <span
        aria-hidden="true"
        class="_dot_8d6e87 _dotActive_8d6e87"
      />
      <span
        class="_label_8d6e87"
      >
        Passkey enrolled
      </span>
      <span
        class="_status_8d6e87"
      >
        <span
          class="_badge_fa5bc6 _success_fa5bc6 _sm_fa5bc6"
        >
          <span
            aria-hidden="true"
            class="_dot_fa5bc6"
          />
          Phase 2
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`WalletUpgradeSection — snapshots > renders the unknown / loading state 1`] = `
<div>
  <div
    class="account-subsection"
  >
    <label
      class="account-field-label"
    >
      Smart account signer
    </label>
    <p
      class="account-field-desc"
    >
      Controls how your TRUST smart contract wallet signs transactions. Phase 2 replaces the server-held custodial key with a passkey in your device's secure enclave.
    </p>
    <div
      class="_row_8d6e87"
    >
      <span
        aria-hidden="true"
        class="_dot_8d6e87 _dotIdle_8d6e87"
      />
      <span
        class="_label_8d6e87"
      >
        Signer type unknown
      </span>
      <span
        class="_status_8d6e87"
      >
        Loading…
      </span>
    </div>
  </div>
</div>
`;
